# deb822-rs

./: Cargo.toml  README.md  test.sources
.github/workflows/: publish.yml  rust.yml
apt-sources/: Cargo.toml  README.md
apt-sources/examples/: setting-via-mutable-trait.rs  source-for-docker.rs
apt-sources/fuzz/: Cargo.toml
apt-sources/fuzz/fuzz_targets/: parse_sources.rs
apt-sources/src/: distribution.rs  error.rs  key_management.rs  keyserver.rs  launchpad.rs  legacy.rs  lib.rs  lossless.rs  ppa.rs  signature.rs  sources_manager.rs  traits.rs  utils.rs
deb822-derive/: Cargo.toml  README.md
deb822-derive/src/: lib.rs
deb822-derive/tests/: field_formatting.rs
deb822-edit/: Cargo.toml  README.md
deb822-edit/src/: lossless.rs
deb822-fast/: Cargo.toml  README.md
deb822-fast/fuzz/: Cargo.toml
deb822-fast/fuzz/fuzz_targets/: modify_fast.rs  parse_fast.rs
deb822-fast/src/: borrowed.rs  convert.rs  lex.rs  lib.rs
deb822-lossless/: Cargo.toml  README.md
deb822-lossless/bench/: bench_lossless.rs
deb822-lossless/examples/: error_recovery.rs
deb822-lossless/fuzz/: Cargo.toml
deb822-lossless/fuzz/fuzz_targets/: modify_deb822.rs  parse_deb822.rs
deb822-lossless/src/: lex.rs  lib.rs  lossless.rs  lossy.rs  parse.rs
debian-control/: Cargo.toml
debian-control/examples/: incremental_parse.rs
debian-control/fuzz/: Cargo.toml
debian-control/fuzz/fuzz_targets/: parse_control.rs  parse_lossless_control.rs  parse_relations.rs
debian-control/src/: fields.rs  pgp.rs  relations.rs  vcs.rs
debian-control/src/edit/: apt.rs  buildinfo.rs  changes.rs  control.rs  relations.rs
debian-control/src/lossless/: apt.rs  buildinfo.rs  changes.rs  control.rs  mod.rs  relations.rs
debian-control/src/lossy/: apt.rs  buildinfo.rs  control.rs  ftpmaster.rs  relations.rs
debian-copyright/: Cargo.toml
debian-copyright/fuzz/: Cargo.toml
debian-copyright/fuzz/fuzz_targets/: parse_copyright.rs
debian-copyright/src/: edit.rs  expression.rs  glob.rs  lib.rs  lossless.rs  lossy.rs
dep3/: Cargo.toml
dep3/examples/: read-dep3.rs
dep3/fuzz/: Cargo.toml
dep3/fuzz/fuzz_targets/: parse_dep3.rs
dep3/src/: edit.rs  fields.rs  lossless.rs  lossy.rs
examples/: readonly.rs
