[workspace]
resolver = "2"
members = [ "deb822-edit", "deb822-derive", "deb822-fast", "debian-control", "debian-copyright", "dep3", "apt-sources"]

[workspace.package]
repository = "https://github.com/jelmer/deb822-rs"
homepage = "https://github.com/jelmer/deb822-rs"

[workspace.dependencies]
rowan = "0.16"
pyo3 = ">=0.24, <0.26"
