[package]
name = "apt-sources"
authors = [
    "Michał Fita <4925040+michalfita@users.noreply.github.com>",
    "Jelmer Vernooĳ <jelmer@jelmer.uk>",
]
edition = "2021"
version = "0.1.1"
license = "Apache-2.0"
description = "A parser for APT source files (package repositories specification)"
repository = { workspace = true }
homepage = { workspace = true }
keywords = ["debian", "deb822", "rfc822", "edit", "apt"]
categories = ["parser-implementations"]

[features]
default = ["lossless", "legacy"]
lossless = []
legacy = ["dep:regex"]
key-management = ["dep:sequoia-openpgp", "dep:sequoia-net", "dep:tokio"]
tracing = ["dep:tracing"]

[dependencies]
deb822-fast = { version = ">=0.1, <0.3", path = "../deb822-fast", features = ["derive"] }
url = { version = "2.5.4", features = ["serde"] }
url-macro = { version = "0.2.0" }
tracing = { version = "0.1", optional = true }
sequoia-net = { version = "0.30", default-features = false, optional = true }
tokio = { version = "1", features = ["rt", "macros"], optional = true }
sequoia-openpgp = { version = "2.0", default-features = false, features = [
    "compression-deflate",
    "crypto-openssl",
], optional = true }
regex = { version = "1.11.1", optional = true }
itertools = { version = "0.14.0" }

[dev-dependencies]
indoc = { version = "2.0.6" }
tempfile = "3"
