[package]
name = "deb822-derive"
description = "Derive macro for deb822 style paragraphs"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
license = "Apache-2.0"
version = "0.3.1"
edition = "2021"
repository.workspace = true
homepage.workspace = true
keywords = ["debian", "deb822", "rfc822", "lossless", "edit"]
categories = ["parser-implementations"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.104"
quote = "1.0.41"
syn = { version = "2", features = ["parsing"] }

[badges]
maintenance = { status = "actively-maintained" }
