[package]
name = "deb822-fast"
version = "0.2.2"
edition = "2021"
repository.workspace = true
homepage.workspace = true
description = "Fast parsing of Debian control files in the deb822 format"
authors = ["Jelmer Vernooĳ <jelmer@debian.org>"]
categories = ["parser-implementations"]
license = "Apache-2.0"
keywords = ["debian", "deb822", "control", "rfc822"]

[dependencies]
deb822-derive = { path = "../deb822-derive", version = "^0.3", optional = true }

[features]
derive = ["dep:deb822-derive"]
