[package]
name = "apt-sources-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[workspace]

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"

[dependencies.apt-sources]
path = ".."

[[bin]]
name = "parse_sources"
path = "fuzz_targets/parse_sources.rs"
test = false
doc = false
bench = false
